fix: Added Some Minor Animations And Fixed Some Minor Bug(Not Responsive)

--- a/src/Components/Hero/hero.scss
+++ b/src/Components/Hero/hero.scss
@@ -35,7 +35,7 @@
         .hero-box{
             background: url('../../assets/content-image01.jpg') no-repeat;
             background-size: cover;
-            width: 10vw;
+            width: 0vw;
             height: 6vw;
             border-radius: .4rem;
             margin-right: .6rem;
